fabric/support/test/tests/noble_ui/call_missing_weight.stderr
error: Invalid noble::call, requires weight attribute i.e. `#[noble::weight($expr)]`
  --> $DIR/call_missing_weight.rs:17:3
   |
17 |         fn foo(origin: OriginFor<T>) -> DispatchResultWithPostInfo {}
   |         ^^
